// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Empty Mini Bag Component should render correctly 1`] = `
<div
  className="cclassName"
>
  <div
    className="continue-shopping"
  >
    <Styled(BodyCopy)
      className={null}
      color="gray.800"
      component="span"
      fontFamily="secondary"
      fontSize="fs18"
      fontWeight="semibold"
      letterSpacing="normal"
      lineHeight="normal"
      textAlign="left"
    >
      YOUR SHOPPING BAG IS EMPTY
    </Styled(BodyCopy)>
  </div>
  <div
    className="continue-shopping"
  >
    <Styled(Anchor)
      anchorVariation="primary"
      dataLocator="addedToBag-continueShopping"
      fontSizeVariation="medium"
      noLink={true}
      to=""
      underline={true}
    >
      continue Shopping
    </Styled(Anchor)>
  </div>
</div>
`;

exports[`Empty Mini Bag Component should render correctly with labels name 1`] = `
<div
  className="className2"
>
  <div
    className="continue-shopping"
  >
    <Styled(BodyCopy)
      className={null}
      color="gray.800"
      component="span"
      fontFamily="secondary"
      fontSize="fs18"
      fontWeight="semibold"
      letterSpacing="normal"
      lineHeight="normal"
      textAlign="left"
    >
      YOUR SHOPPING BAG IS EMPTY
    </Styled(BodyCopy)>
  </div>
  <div
    className="continue-shopping"
  >
    <Styled(Anchor)
      anchorVariation="primary"
      dataLocator="addedToBag-continueShopping"
      fontSizeVariation="medium"
      noLink={true}
      to=""
      underline={true}
    >
      continue Shopping
    </Styled(Anchor)>
  </div>
</div>
`;
